--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # API configuration
 PORT=4000
 NODE_ENV=development
+
+# Database configuration
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/friendly_adventure?schema=public
